[gd_scene load_steps=9 format=2]

[ext_resource path="res://Objects/Heroes/Hud/HealthGoldHud.gd" type="Script" id=1]
[ext_resource path="res://Objects/Heroes/Hud/Textures/HealthHearts.png" type="Texture" id=2]
[ext_resource path="res://Objects/Heroes/Hud/Fonts/HealthDigits.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Objects/Heroes/Hud/Textures/GoldIcon.png" type="Texture" id=4]
[ext_resource path="res://Objects/Heroes/Hud/Fonts/GoldDigits.fnt" type="BitmapFont" id=5]

[sub_resource type="AtlasTexture" id=1]

flags = 0
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )
margin = Rect2( 0, 0, 0, 0 )
filter_clip = false

[sub_resource type="Animation" id=2]

resource_name = "Appear"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "Disappear"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="HealthHud" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]
gold_counter = 0
health_counter = 100

[node name="HealthHearts" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 4.0
margin_right = 21.0
margin_bottom = 20.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 1 )
stretch_mode = 4
_sections_unfolded = [ "Margin", "Rect" ]

[node name="HealthCounter" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 42.0
margin_top = 11.0
margin_right = 122.0
margin_bottom = 75.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
text = "100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="GoldIcon" type="TextureRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 25.0
margin_right = 21.0
margin_bottom = 41.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 4
_sections_unfolded = [ "Margin", "Rect" ]

[node name="GoldCounter" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 42.0
margin_top = 37.0
margin_right = 213.0
margin_bottom = 104.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
text = "100,000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="VisibilityTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = "Appear"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Appear = SubResource( 2 )
anims/Disappear = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[connection signal="timeout" from="VisibilityTimer" to="." method="_on_VisibilityTimer_timeout"]


